# AngelscriptProfiler

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: Application.cpp  Application.hpp  Main.cpp
src/as/: ScriptProfiler.cpp  ScriptProfiler.hpp  ScriptingSystem.cpp  ScriptingSystem.hpp  as_addons.cpp  as_utils.hpp
vcpkg_config/triplets/: x64-common.cmake  x64-windows.cmake
